base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: apple-service
  labels:
    app: apple
spec:
  selector:
    app: apple
  ports:
    - port: 5678
