base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
  labels:
    app: apple
  namespace: kpt_test
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apple-service
            port:
              number: 5678
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apple-service
            port:
              number: 5678
